--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <footer>
     <p>&copy; Car Website 2023</p>
-    <audio src="assets/y2mate.com - CEO Talk  Paving the Way to a Cleaner Future at COP28.mp3" controls></audio>
+    <audio src="assets/CEO Talk  Paving the Way to a Cleaner Future at COP28.mp3" controls></audio>
   </footer>
 
   <script src="index.js"></script>
